--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" href="index.css">
 </head>
 <body>
+	<div class="header_index">Калейдоскоп відкриттів</div>
 	<div class="left_index_fon"></div>
 	<div class="right_index_fon"></div>
 	<div class="full">
