--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Главная страница_Федірко</title>
 	<link rel="stylesheet" href="index.css">
+	<link href="https://fonts.googleapis.com/css2?family=Sansita+Swashed:wght@900&display=swap" rel="stylesheet">
 </head>
 <body>
 	<div class="header_index">Калейдоскоп відкриттів</div>
