--- a/Наукові відкриття 21 ст..html
+++ b/Наукові відкриття 21 ст..html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Наука ХХІ ст. Федірко</title>
 	<link rel="stylesheet" type="text/css" href="index.css">
+	<link href="https://fonts.googleapis.com/css2?family=Sansita+Swashed:wght@900&display=swap" rel="stylesheet">
 </head>
 <body>
 	<header>
