--- a/Резюме.html
+++ b/Резюме.html
@@ -11,6 +11,7 @@
 		<p class="p_to_index"><a class="a_to_index" href="index.html">Головна сторінка</a></p>
 	</header>
 	<hr>
+	<p class="caption">Резюме</p>
 <div class="eighty">
 	<dl class="rezume_first_dl">
 	<dt class="dt_in_rezume">ПІБ:</dt>
