--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 			<p class="url"><a href="Визначні мореплавці.html">1) Визначні моревплавці;</a></p>
 			<p class="url"><a href="Резюме.html">2) Резюме;</a></p>
 			<p class="url"><a href="Наукові відкриття 21 ст..html">3) Наука XXI ст.;</a></p>
+			<p class="url"><a href="Таблица_мов_програмування.html">4) Таблица_мов_програмування;</a></p>
 		</div>
 
 		<div class="main">
