--- a/Визначні мореплавці.html
+++ b/Визначні мореплавці.html
@@ -5,6 +5,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="index.css">
 	<link href="https://fonts.googleapis.com/css2?family=Sansita+Swashed:wght@900&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Contrail+One&family=Lobster&family=Tillana:wght@600&display=swap" rel="stylesheet">
+
 	<title>Визначні мореплавці_Федірко</title>
 </head>
 <body>
@@ -12,13 +14,13 @@
 		<p class="p_to_index"><a class="a_to_index" href="index.html">Головна сторінка</a></p>
 	</header>
 	<hr>
+	<p class="caption">Визначні мореплаві</p>
 <div class="eighty">
-	<table class="moreplavci" cellpadding="5" border="4">
-		<p class="caption">Визначні мореплаві</p>
+	<table class="moreplavci" cellpadding="5" border="4" style="margin-top: 20px;">
 		<tr bgcolor="#AFEEEE">
-			<th>Мореплавець</th>
-			<th>Подорожі, відкриття</th>
-			<th>Вшанування пам’яті</th>
+			<th class="name_row">Мореплавець</th>
+			<th class="name_row">Подорожі, відкриття</th>
+			<th class="name_row">Вшанування пам’яті</th>
 		</tr>
 		<tr bgcolor="#90EE90">
 			<td rowspan="4">
@@ -28,7 +30,7 @@
 					<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5d/Christopher_Columbus.PNG/250px-Christopher_Columbus.PNG">
 				</a>
 			</td>
-			<td><h3 class="podorozi">Перша подорож 1492-1493</h3>
+			<td><a href="https://uk.wikipedia.org/wiki/%D0%A5%D1%80%D0%B8%D1%81%D1%82%D0%BE%D1%84%D0%BE%D1%80_%D0%9A%D0%BE%D0%BB%D1%83%D0%BC%D0%B1#%D0%9F%D0%B5%D1%80%D1%88%D0%B0_%D0%BF%D0%BE%D0%B4%D0%BE%D1%80%D0%BE%D0%B6_%D0%9A%D0%BE%D0%BB%D1%83%D0%BC%D0%B1%D0%B0_(1492%E2%80%941493)" class="podorozi">Перша подорож 1492-1493</a>
 				<p class="infa_more">Відкриті острови Куба та Гаїті</p>
 			</td>
 			<td rowspan="4">
@@ -42,19 +44,19 @@
 		</tr>
 		<tr bgcolor="#90EE90">
 			<td>
-				<h3 class="podorozi">Друга подорож 1493-1496</h3>
+				<a href="https://uk.wikipedia.org/wiki/%D0%A5%D1%80%D0%B8%D1%81%D1%82%D0%BE%D1%84%D0%BE%D1%80_%D0%9A%D0%BE%D0%BB%D1%83%D0%BC%D0%B1#%D0%94%D1%80%D1%83%D0%B3%D0%B0_%D0%BF%D0%BE%D0%B4%D0%BE%D1%80%D0%BE%D0%B6_%D0%9A%D0%BE%D0%BB%D1%83%D0%BC%D0%B1%D0%B0_(1493%E2%80%931496)" class="podorozi">Друга подорож 1493-1496</a>
 				<p class="infa_more">Відкриті острови Монтсеррат, Антигуа, Невіс, Пуерто-Рико, Ямайка</p>
 			</td>
 		</tr>
 		<tr bgcolor="#90EE90">
 			<td>
-				<h3 class="podorozi">Третя подорож 1498-1500</h3>
+				<a href="https://uk.wikipedia.org/wiki/%D0%A5%D1%80%D0%B8%D1%81%D1%82%D0%BE%D1%84%D0%BE%D1%80_%D0%9A%D0%BE%D0%BB%D1%83%D0%BC%D0%B1#%D0%A2%D1%80%D0%B5%D1%82%D1%8F_%D0%BF%D0%BE%D0%B4%D0%BE%D1%80%D0%BE%D0%B6_%D0%9A%D0%BE%D0%BB%D1%83%D0%BC%D0%B1%D0%B0_(1498%E2%80%931500)" class="podorozi">Третя подорож 1498-1500</a>
 				<p class="infa_more">Вперше досягнуто материкової частини Америки. Відкрив острів Тринідад</p>
 			</td>
 		</tr>
 		<tr bgcolor="#90EE90">
 			<td>
-				<h3 class="podorozi">Четверта подорож 1502-1504</h3>
+				<a href="https://uk.wikipedia.org/wiki/%D0%A5%D1%80%D0%B8%D1%81%D1%82%D0%BE%D1%84%D0%BE%D1%80_%D0%9A%D0%BE%D0%BB%D1%83%D0%BC%D0%B1#%D0%A7%D0%B5%D1%82%D0%B2%D0%B5%D1%80%D1%82%D0%B0_%D0%BF%D0%BE%D0%B4%D0%BE%D1%80%D0%BE%D0%B6_%D0%9A%D0%BE%D0%BB%D1%83%D0%BC%D0%B1%D0%B0_(1502%E2%80%931504)" class="podorozi">Четверта подорож 1502-1504</a>
 				<p class="infa_more">Відкрив материк на південь від Куби – берег Центральної Америки і довів, що Атлантичний океан відділяє від Південного моря нездоланний бар'єр</p>
 			</td>
 		</tr>
@@ -69,7 +71,7 @@
 				</a>
 			</td>
 			<td>
-				<h3 class="podorozi">Перша подорож 1497-1499</h3>
+				<a href="https://uk.wikipedia.org/wiki/%D0%92%D0%B0%D1%81%D0%BA%D0%BE_%D0%B4%D0%B0_%D0%93%D0%B0%D0%BC%D0%B0#%D0%9F%D0%B5%D1%80%D1%88%D0%B0_%D0%BF%D0%BE%D0%B4%D0%BE%D1%80%D0%BE%D0%B6" class="podorozi">Перша подорож 1497-1499</a>
 				<p class="infa_more">Першовідкривач прямого морського торгового шляху до Азії</p>
 			</td>
 			<td rowspan="3">
@@ -84,13 +86,13 @@
 		</tr>
 		<tr bgcolor="#EEE8AA">
 			<td>
-				<h3 class="podorozi">Друга подорож 1502-1503</h3>
+				<a href="https://uk.wikipedia.org/wiki/%D0%92%D0%B0%D1%81%D0%BA%D0%BE_%D0%B4%D0%B0_%D0%93%D0%B0%D0%BC%D0%B0#%D0%94%D1%80%D1%83%D0%B3%D0%B0_%D0%BF%D0%BE%D0%B4%D0%BE%D1%80%D0%BE%D0%B6" class="podorozi">Друга подорож 1502-1503</a>
 				<p class="infa_more">Заснував форти і факторії в Мозамбіку, підкорив арабського еміра і наклав на нього данину</p>
 			</td>
 		</tr>
 		<tr bgcolor="#EEE8AA">
 			<td>
-				<h3 class="podorozi">Третя подорож 1524-1525</h3>
+				<a href="https://uk.wikipedia.org/wiki/%D0%92%D0%B0%D1%81%D0%BA%D0%BE_%D0%B4%D0%B0_%D0%93%D0%B0%D0%BC%D0%B0#%D0%A2%D1%80%D0%B5%D1%82%D1%8F_%D0%BF%D0%BE%D0%B4%D0%BE%D1%80%D0%BE%D0%B6" class="podorozi">Третя подорож 1524-1525</a>
 				<p class="infa_more">Вжив жорстких заходів проти зловживань колоніальної адміністрації та навів новий порядок у Португальській Індії</p>
 			</td>
 		</tr>
@@ -105,7 +107,7 @@
 				</a>
 			</td>
 			<td>
-				<h3 class="podorozi">Навколосвітня подорож 1519-1522</h3>
+				<a href="https://uk.wikipedia.org/wiki/%D0%A4%D0%B5%D1%80%D0%BD%D0%B0%D0%BD_%D0%9C%D0%B0%D0%B3%D0%B5%D0%BB%D0%BB%D0%B0%D0%BD#%D0%95%D0%BA%D1%81%D0%BF%D0%B5%D0%B4%D0%B8%D1%86%D1%96%D1%8F" class="podorozi">Навколосвітня подорож 1519-1522</a>
 				<ul class="list">
 					<li>Відкрито Магелланову протоку, яка сполучає Атлантичний і Тихий океани.</li>
 					<li>Відкрито острови Гуам і Рота в архіпелазі Маріанських островів</li>
