--- a/Наукові відкриття 21 ст..html
+++ b/Наукові відкриття 21 ст..html
@@ -12,9 +12,9 @@
 		<p class="p_to_index"><a class="a_to_index" href="index.html">Головна сторінка</a></p>
 	</header>
 	<hr>
+	<p class="caption">Наукові відкриття XXI ст.</p>
 	<div class="eighty">
-		<table>
-			<p class="caption">Наукові відкриття XXI ст.</p>	
+		<table style="margin-top: 20px;">
 			<tr>
 				<th></th>
 				<th>Наукове відкриття I</th>
