--- a/Таблица_мов_програмування.html
+++ b/Таблица_мов_програмування.html
@@ -25,7 +25,7 @@
 		<th class="new_row_programmer">Ratings</th>
 		<th class="new_row_programmer">Change</th>	
 		</tr>
-		<tr class="tr_programmer2">
+		<tr class="tr_programmer">
 			<a href="https://www.tiobe.com/tiobe-index/c/" class="programmer">
 			<td class="td_programmer">1</td>
 			<td class="td_programmer">2</td>
@@ -43,7 +43,7 @@
 			<td class="td_programmerc">12.56%</td>
 			<td class="td_programmerc">-4.32%</td>
 		</tr>
-		<tr class="tr_programmer2"><a href="" class="a_programmer">
+		<tr class="tr_programmer"><a href="" class="a_programmer">
 			<td class="td_programmer">3</td>
 			<td class="td_programmer">3</td>
 			<td class="td_programmer"></td>
@@ -59,7 +59,7 @@
 			<td class="td_programmerc">6.94%</td>
 			<td class="td_programmerc">+0.71%</td>
 		</tr>
-		<tr class="tr_programmer2"><a href="" class="a_programmer">
+		<tr class="tr_programmer"><a href="" class="a_programmer">
 			<td class="td_programmer">5</td>
 			<td class="td_programmer">5</td>
 			<td class="td_programmer"></td>
@@ -75,7 +75,7 @@
 			<td class="td_programmerc">3.97%</td>
 			<td class="td_programmerc">+0.23%</td>
 		</tr>
-		<tr class="tr_programmer2"><a href="" class="a_programmer">
+		<tr class="tr_programmer"><a href="" class="a_programmer">
 			<td class="td_programmer">7</td>
 			<td class="td_programmer">7</td>
 			<td class="td_programmer"></td>
@@ -91,7 +91,7 @@
 			<td class="td_programmerc">2.09%</td>
 			<td class="td_programmerc">+0.18%</td>
 		</tr>
-		<tr class="tr_programmer2"><a href="" class="a_programmer">
+		<tr class="tr_programmer"><a href="" class="a_programmer">
 			<td class="td_programmer">9</td>
 			<td class="td_programmer">15</td>
 			<td class="td_programmer"></td>
