--- a/index.html
+++ b/index.html
@@ -34,5 +34,10 @@
 		</div>
 
 	</div>
+	<p style="text-align: right;">
+	<a href="#top" class="way_to_nav">
+		&#8613
+	</a>
+	</p>
 </body>
 </html>
