--- a/Визначні мореплавці.html
+++ b/Визначні мореплавці.html
@@ -136,11 +136,11 @@
 			</tr>
 		</tr>
 	</table>
-	<p style="text-align: center;">
-	<a href="#top">
-		<img class="com" src="https://vignette.wikia.nocookie.net/apocalypse/images/a/a0/Unnamed.png/revision/latest/scale-to-width-down/340?cb=20180114131303&path-prefix=ru">
+</div>
+	<p style="text-align: right;">
+	<a href="#top" class="way_to_nav">
+		&#8613
 	</a>
 	</p>
-</div>
 </body>
 </html>
