--- a/Резюме.html
+++ b/Резюме.html
@@ -41,5 +41,10 @@
 	<dd class="dd_in_rezume">Telegram: <a href="https://web.telegram.org/#/login">Vlad0951077895</a></dd>
 	</dl>
 </div>
+<p style="text-align: right;">
+	<a href="#top" class="way_to_nav">
+		&#8613
+	</a>
+	</p>
 </body>
 </html>
