--- a/Таблица_мов_програмування.html
+++ b/Таблица_мов_програмування.html
@@ -110,5 +110,10 @@
 		</tr>
 		</table>
 	</div>
+	<p style="text-align: right;">
+	<a href="#top" class="way_to_nav">
+		&#8613
+	</a>
+	</p>
 </body>
 </html>
