--- a/Наукові відкриття 21 ст..html
+++ b/Наукові відкриття 21 ст..html
@@ -45,5 +45,10 @@
 			<div class="way_to_official"><a class="css_way_to_official" href="https://ru.wikipedia.org/wiki/%D0%92%D0%B8%D1%80%D1%82%D1%83%D0%B0%D0%BB%D1%8C%D0%BD%D0%B0%D1%8F_%D1%80%D0%B5%D0%B0%D0%BB%D1%8C%D0%BD%D0%BE%D1%81%D1%82%D1%8C">Джерело</a></div>
 		</div>
 	</div>
+	<p style="text-align: right;">
+	<a href="#top" class="way_to_nav">
+		&#8613
+	</a>
+	</p>
 </body>
 </html>
