--- a/Politest.html
+++ b/Politest.html
@@ -25,17 +25,18 @@
 <!-- line 23, 33, 34, 35, 36, 37 РАЗкоментить, если вернуть старое меню. 
 line 27, 28, 29, 30, 31, 32 ЗАкоментить, если вернуть старое меню -->
 		<ul class="menu-main">
-  			<li><a href="" class="current">Work</a></li>
-  			<li><a href="">About</a></li>
-  			<li><a href="">Blog</a></li>
-  			<li><a href="">Contact</a></li>
+  			<li><a href="" class="current">Історія</a></li>
+  			<li><a href="">Фізика</a></li>
+  			<li><a href="">Інформатика</a></li>
+  			<li><a href="">Математика</a></li>
+  			<li><a href="">Біологія</li>
 		</ul>
-		<!-- <p class="list_nav">
+	<!--<p class="list_nav">
 			<a href="" class="a_nav">История</a>
 			<a href="" class="a_nav">Информатика</a>
 			<a href="" class="a_nav">Программирование</a>
-		</p> -->
-	<!-- </div> -->
+		</p>
+	</div> -->
 	<div class="hr"></div>
 	<div class="main">
 		<p></p>
