--- a/Politest_one.html
+++ b/Politest_one.html
@@ -10,7 +10,7 @@
 	<div class="full">
 		<div class="header">
 			<div class="header_sticky">
-				<img src="img/gerb.png" alt="" class="gerb">
+				<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/16/%D0%93%D0%B5%D1%80%D0%B1_%D0%BB%D1%96%D1%86%D0%B5%D1%8E_%C2%AB%D0%9F%D0%BE%D0%BB%D1%96%D1%82%C2%BB.png/450px-%D0%93%D0%B5%D1%80%D0%B1_%D0%BB%D1%96%D1%86%D0%B5%D1%8E_%C2%AB%D0%9F%D0%BE%D0%BB%D1%96%D1%82%C2%BB.png" alt="" class="gerb">
 				<p class="politest">Politest</p>
 <!-- 				<div class="div_block_button">
 					<p class="block_button">
