--- a/Politest.html
+++ b/Politest.html
@@ -29,7 +29,7 @@ line 27, 28, 29, 30, 31, 32 ЗАкоментить, если вернуть ст
   			<li><a href="">Фізика</a></li>
   			<li><a href="">Інформатика</a></li>
   			<li><a href="">Математика</a></li>
-  			<li><a href="">Біологія</li>
+  			<li><a href="">Біологія</a></li>
 		</ul>
 	<!--<p class="list_nav">
 			<a href="" class="a_nav">История</a>
