--- a/Politest_one.html
+++ b/Politest_one.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="SHORTCUT ICON" href="https://upload.wikimedia.org/wikipedia/commons/thumb/1/16/%D0%93%D0%B5%D1%80%D0%B1_%D0%BB%D1%96%D1%86%D0%B5%D1%8E_%C2%AB%D0%9F%D0%BE%D0%BB%D1%96%D1%82%C2%BB.png/450px-%D0%93%D0%B5%D1%80%D0%B1_%D0%BB%D1%96%D1%86%D0%B5%D1%8E_%C2%AB%D0%9F%D0%BE%D0%BB%D1%96%D1%82%C2%BB.png" type="image/x-icon">
 	<link rel="stylesheet" href="style_one.css">
 	<link rel="stylesheet" href="icofont.css">
 	<title>Document</title>	
@@ -27,32 +28,58 @@
 				</div>
 
 			<div class="to_subject">
-				<a href="#nav">
+				<a href="#menu" style=" transition-duration: 500ms;">
 					<p class="way_to_subject">&#5167;</p>
 				</a>
 			</div>
 		</div>
-		<div class="nav" id="nav">
-			<div class="block_subject">
-					<a href="" style="color: #0B2349" class="name_lesson">История</a>
+<!--		<div class="nav" id="nav">
+ 			<div class="block_subject">
+					<a data-name="" href="" style="color: #0B2349" class="name_lesson card_history">История</a>
 			</div>
 			<div class="block_subject">
-					<a href="" class="name_lesson">Физика</a>
+					<a href="" class="name_lesson card_physic">Физика</a>
 			</div>
 			<div class="block_subject">
-					<a href="" style="color: #0B2349" class="name_lesson">Программирование</a>
+					<a href="" style="color: #0B2349" class="name_lesson card_programm">Программирование</a>
 			</div>
 			<div class="block_subject">
-					<a href="" class="name_lesson">Биология</a>
+					<a href="" class="name_lesson card_byology">Биология</a>
 			</div>
 			<div class="block_subject">
-					<a href="" style="color: #0B2349" class="name_lesson">Укр. мова</a>
+					<a href="" style="color: #0B2349" class="name_lesson card_chemist">Химия</a>
 			</div>
 			<div class="block_subject">
-					<a href="" class="name_lesson">Информатика</a>
+					<a href="" class="name_lesson card_informatika">Информатика</a>
+			</div>
+		</div> -->
+		<ul class="menu" id="menu">
+			<li class="menu_subject">
+				<a data-name="История" href="" id="history" class="way_to_menu">История</a>
+			</li>
+			<li class="menu_subject">
+				<a data-name="Программирование" href="" id="programm" class="way_to_menu even">Программирование</a>
+			</li>
+			<li class="menu_subject">
+				<a data-name="Информатика" href="" id="inform" class="way_to_menu">Информатика</a>
+			</li>
+			<li class="menu_subject">
+				<a data-name="Физика" href="" id="physic" class="way_to_menu even">Физика</a>
+			</li>
+			<li class="menu_subject">
+				<a data-name="Химия" href="" id="chemist" class="way_to_menu">Химия</a>
+			</li>
+			<li class="menu_subject">
+				<a data-name="Биология" href="" id="biology" class="way_to_menu even">Биология</a>
+			</li>
+		</ul>
+		<div class="footer">
+			<div class="to_header">
+				<a href="#">
+					<p class="way_to_header" style="">&#5169;</p>
+				</a>
 			</div>
 		</div>
-
 	</div>
 </body>
 </html>
