--- a/Politest_index.html
+++ b/Politest_index.html
@@ -38,7 +38,7 @@
 		</div>
 		<ul class="menu" id="menu">
 			<li class="menu_subject">
-				<a data-name="История" href="index.php" id="history" class="way_to_menu">История</a>
+				<a data-name="История" href="Page_with_tests.php" id="history" class="way_to_menu">История</a>
 			</li>
 			<li class="menu_subject">
 				<a data-name="Программирование" href="" id="programm" class="way_to_menu even">Программирование</a>
