--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 			<p class="url"><a href="Наукові відкриття 21 ст..html">3) Наука XXI ст.;</a></p>
 			<p class="url"><a href="Таблица_мов_програмування.html">4) Таблица_мов_програмування;</a></p>
 			<p class="url"><a href="Практична.html">5) Практическая работа (08.12.2020);</a></p>
+			<p class="url"><a href="NewYearList.html">5) Практическая работа (16.12.2020);</a></p>
 			<p class="url"><a href="Politest_index.html">6) Politest_one;</a></p>
 		</div>
 
