--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 			<p class="url"><a href="Практична.html">5) Практическая работа (08.12.2020);</a></p>
 			<p class="url"><a href="NewYearList.html">5) Практическая работа (16.12.2020);</a></p>
 			<p class="url"><a href="Politest_index.html">6) Politest_one;</a></p>
+			<p class="url"><a href="dez.html">6) Dez;</a></p>
 		</div>
 
 		<div class="main">
