--- a/dez.html
+++ b/dez.html
@@ -9,7 +9,7 @@
     
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" id="ao_optimized_gfonts" href="https://fonts.googleapis.com/css?family=Roboto:500&amp;display=swap">
-    <link rel="stylesheet" href="css/style_test.css">
+    <link rel="stylesheet" href="css/style_dez.css">
     <title>Hello, world!</title>
 </head>
 <body style="height: 2000px;">
