--- a/dez.html
+++ b/dez.html
@@ -67,7 +67,7 @@
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="img/слайд_1.png" height="350px" class="d-block w-100" alt="...">
+                    <img src="img/слайд_4.jpg" height="350px" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>First slide label</h5>
                         <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
