--- a/dez.html
+++ b/dez.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/style_dez.css">
     <title>Hello, world!</title>
 </head>
-<body style="height: 2000px;">
+<body style="height: 3000px;">
     <!-- Верхнее меню на странице с названием фирмы и навигацией -->
     <!-- НАЧАЛО -->
     <div class="container">
@@ -253,7 +253,7 @@
                     </a>
                 </div>
             </div>
-            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 text-center box1">
+<!--           <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 text-center box1">
                 <div class="one_card">
                     <a href="">
                         <div class="one_card__infa">
@@ -300,18 +300,18 @@
                         </div>
                     </a>
                 </div>
-            </div>
+            </div>--> 
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 text-center box1">
                 <div class="one_card">
                     <a href="">
                         <div class="one_card__infa">
                             <div class="one_card__icon">
                                 <i class="fa"> 
-                                    <img src="img/dezinfekcija.png" alt=""> 
+                                    <img src="img/ikonka_102h102_gribok (1).png" alt=""> 
                                 </i>
                             </div>
-                            <h3 class="one_card__title">Дезинфекция</h3>
-                            <p class="one_card__content">Комары являются переносчиками опасных заболеваний: малярии, жёлтой лихорадки, денге и некоторых энцефалитов</p>
+                            <h3 class="one_card__title">грибок</h3>
+                            <p class="one_card__content">Дезинфекция и обеззараживание помещения. Устранение проблем с вентиляцией. Гарантия на 100%.</p>
                             <p class="one_card__link">Узнать больше...</p>
                         </div>
                     </a>
@@ -416,6 +416,30 @@
         </div>
 
 
+    </div>
+    <!-- КОНЕЦ -->
+
+    <!-- Форма отправки имя/телефона/почты -->
+    <!-- НАЧАЛО -->
+    <div class="container-fluid pb-2" style="background: linear-gradient(to bottom right, #d4ad00 14%, #ff0000 250%);">
+        <div class="container container_of_the_form">
+            <h4>Заполните форму и получите персональное предложение</h4>
+            <div class="row g-4">
+                <div class="col-lg-3">
+                  <input type="text" class="form-control" placeholder="Имя" aria-label="First name">
+                </div>
+                <div class="col-lg-3 m-auto mt-4">
+                  <input type="text" class="form-control" placeholder="Номер телефона для связи" aria-label="Last name">
+                </div>
+                <div class="col-lg-3">
+                    <input type="text" class="form-control" placeholder="Почта" aria-label="Last name">
+                </div>
+            </div>
+            <div class="row"></div>
+            <!-- btn-outline-success or btn-danger -->
+                <button type="submit" class="d-block col-lg-2 btn btn-danger m-auto mt-4 mb-4">Submit</button>
+            </div>
+        </div>
     </div>
     <!-- КОНЕЦ -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
