--- a/dez.html
+++ b/dez.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="uk">
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -426,18 +426,51 @@
             <h4>Заполните форму и получите персональное предложение</h4>
             <div class="row g-4">
                 <div class="col-lg-3">
-                  <input type="text" class="form-control" placeholder="Имя" aria-label="First name">
+                    <input type="text" class="form-control container_of_the_form__input" placeholder="Имя" aria-label="First name">
                 </div>
                 <div class="col-lg-3 m-auto mt-4">
-                  <input type="text" class="form-control" placeholder="Номер телефона для связи" aria-label="Last name">
+                    <input type="text" class="form-control container_of_the_form__input" placeholder="Номер телефона для связи" aria-label="Last name">
                 </div>
                 <div class="col-lg-3">
-                    <input type="text" class="form-control" placeholder="Почта" aria-label="Last name">
+                    <input type="text" class="form-control container_of_the_form__input" placeholder="Почта" aria-label="Last name">
                 </div>
             </div>
-            <div class="row"></div>
+            <div class="row">  <!-- Рядок для кнопки, нужен ли он? Кнопка растягивается на весь экран при <1000px -->
             <!-- btn-outline-success or btn-danger -->
                 <button type="submit" class="d-block col-lg-2 btn btn-danger m-auto mt-4 mb-4">Submit</button>
+            </div>
+        </div>
+    </div>
+    <!-- КОНЕЦ -->
+
+    <!-- Гарантия/безопастность/услуги -->
+    <!-- НАЧАЛО -->
+    <div class="container garantiya">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-3 garantiya_block">
+                    <div class="title">
+                        <p class="garantiya_title">100% гарантия</p>
+                    </div>
+                    <p class="garantiya_content"></p>
+                </div>
+                <div class="col-lg-3 garantiya_block">
+                    <p class="garantiya_title">безопастность</p>
+                    <p class="garantiya_content"></p>
+                </div>
+                <div class="col-lg-3 garantiya_block">
+                    <p class="garantiya_title">услуги</p>
+                    <p><div class="circle"><p>&#10003;</p></div>Для организаций</p>
+                    <hr>
+                    <p><div class="circle"><p>&#10003;</p></div>Для квартиры</p>
+                    <hr>
+                    <p><div class="circle"><p>&#10003;</p></div>Для загородных участков и коттеджей</p>
+                    <hr>
+                </div>
+                <div class="col-lg-3 garantiya_time_block">
+                    <p class="garantiya_time-title"></p>
+
+                </div>
             </div>
         </div>
     </div>
