--- a/dez.html
+++ b/dez.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/style_dez.css">
     <title>Hello, world!</title>
 </head>
-<body style="height: 3000px;">
+<body style="height: 5000px;">
     <!-- Верхнее меню на странице с названием фирмы и навигацией -->
     <!-- НАЧАЛО -->
     <div class="container">
@@ -425,13 +425,13 @@
         <div class="container container_of_the_form">
             <h4>Заполните форму и получите персональное предложение</h4>
             <div class="row g-4">
-                <div class="col-lg-3">
+                <div class="col-lg-3 col-md-4">
                     <input type="text" class="form-control container_of_the_form__input" placeholder="Имя" aria-label="First name">
                 </div>
-                <div class="col-lg-3 m-auto mt-4">
+                <div class="col-lg-3 col-md-4 m-auto mt-4">
                     <input type="text" class="form-control container_of_the_form__input" placeholder="Номер телефона для связи" aria-label="Last name">
                 </div>
-                <div class="col-lg-3">
+                <div class="col-lg-3 col-md-4">
                     <input type="text" class="form-control container_of_the_form__input" placeholder="Почта" aria-label="Last name">
                 </div>
             </div>
@@ -448,18 +448,22 @@
     <div class="container garantiya">
         <div class="container">
             <div class="row">
-                <div class="col-lg-3 garantiya_block">
+                <div class="col-lg-3 col-md-6 garantiya_block">
                     <div class="title">
                         <p class="garantiya_title">100% гарантия</p>
                     </div>
-                    <p class="garantiya_content"></p>
+                    <p class="garantiya_content">Мы применяем проверенные на практике методы и приёмы борьбы с любыми бытовыми насекомыми и грызунами. Работы на Ваших объектах будут выполнены независимо от времени года и прочих условий.</p>
                 </div>
-                <div class="col-lg-3 garantiya_block">
-                    <p class="garantiya_title">безопастность</p>
-                    <p class="garantiya_content"></p>
+                <div class="col-lg-3 col-md-6 garantiya_block">
+                    <div class="title">
+                        <p class="garantiya_title">безопастность</p>
+                    </div>
+                    <p class="garantiya_content">Мы используем лучшие современные препараты, дающие стабильный результат в полевых условиях. Все препараты сертифицированы (предоставлем сертификат соответствия).</p>
                 </div>
-                <div class="col-lg-3 garantiya_block">
-                    <p class="garantiya_title">услуги</p>
+                <div class="col-lg-3 col-md-6 garantiya_block">
+                    <div class="title">
+                        <p class="garantiya_title">услуги</p>
+                    </div>
                     <p><div class="circle"><p>&#10003;</p></div>Для организаций</p>
                     <hr>
                     <p><div class="circle"><p>&#10003;</p></div>Для квартиры</p>
@@ -467,9 +471,11 @@
                     <p><div class="circle"><p>&#10003;</p></div>Для загородных участков и коттеджей</p>
                     <hr>
                 </div>
-                <div class="col-lg-3 garantiya_time_block">
-                    <p class="garantiya_time-title"></p>
-
+                <div class="col-lg-3 col-md-6 garantiya_time_block">
+                    <div class="garantiya_time_fon">
+                        <p class="garantiya_time_title">Время работы</p>
+                        <p class="garantiya_time_content">Проведём дезработы в любое удобное для вас время: круглосуточно, в том числе в праздничные и выходные дни.</p>
+                    </div>
                 </div>
             </div>
         </div>
