--- a/dez.html
+++ b/dez.html
@@ -4,6 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="SHORTCUT ICON" href="img/dezodoracija.png" type="image/x-icon">
 
     <!-- Bootstrap CSS -->
     
