--- a/dez.html
+++ b/dez.html
@@ -28,7 +28,7 @@
                     <a href="" class="top_menu_link">Блог</a>
                     <a href="" class="top_menu_link">Вопрос-ответ</a>
                 </div>
-                <div class="offset-lg-3 col-lg-1 offset-md-1 col-md-1 top_black_block text-center">
+                <div class="offset-lg-3 col-lg-1 offset-md-1 col-md-1 top_black_block tex">
                     <a href="tel:+380503559950" class="top_menu_link_to">&#128379;</a>
                     <a href="https://mail.google.com/mail/u/0/#inbox?compose=CllgCJNqtbnWrnmlTlNjMjcNkRXdjLBxZbMxbxWjdQsMXrLNKQHhLWLnxCcrbJSSCkCKPkHhCXB" class="top_menu_link_to">&#128393;</a>
                 </div>
@@ -276,55 +276,7 @@
                         </div>
                     </a>
                 </div>
-            </div>
-<!--           <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 text-center ">
-                <div class="one_card">
-                    <a href="">
-                        <div class="one_card__infa">
-                            <div class="one_card__icon">
-                                <i class="fa"> 
-                                    <img src="img/dezinsekcija.png" alt=""> 
-                                </i>
-                            </div>
-                            <h3 class="one_card__title">Дезинсекция</h3>
-                            <p class="one_card__content">Комары являются переносчиками опасных заболеваний: малярии, жёлтой лихорадки, денге и некоторых энцефалитов</p>
-                            <p class="one_card__link">Узнать больше...</p>
-                        </div>
-                    </a>
-                </div>
-            </div>
-            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 text-center box1">
-                <div class="one_card">
-                    <a href="">
-                        <div class="one_card__infa">
-                            <div class="one_card__icon">
-                                <i class="fa"> 
-                                    <img src="img/deratacija.png" alt=""> 
-                                </i>
-                            </div>
-                            <h3 class="one_card__title">Дератизация</h3>
-                            <p class="one_card__content">Комары являются переносчиками опасных заболеваний: малярии, жёлтой лихорадки, денге и некоторых энцефалитов</p>
-                            <p class="one_card__link">Узнать больше...</p>
-                        </div>
-                    </a>
-                </div>
-            </div>
-            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 text-center box1">
-                <div class="one_card">
-                    <a href="">
-                        <div class="one_card__infa">
-                            <div class="one_card__icon">
-                                <i class="fa"> 
-                                    <img src="img/дез.jpg" alt=""> 
-                                </i>
-                            </div>
-                            <h3 class="one_card__title">Десерпентация</h3>
-                            <p class="one_card__content">Комары являются переносчиками опасных заболеваний: малярии, жёлтой лихорадки, денге и некоторых энцефалитов</p>
-                            <p class="one_card__link">Узнать больше...</p>
-                        </div>
-                    </a>
-                </div>
-            </div>--> 
+            </div> 
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 text-center">
                 <div class="one_card">
                     <a href="">
