--- a/dez.html
+++ b/dez.html
@@ -20,7 +20,7 @@
     <div class="container-fluid top_black_menu">
         <div class="container">
             <div class="row">
-                <div class="col-lg-8 col-md-10 col-sm-12 top_black_block">
+                <div class="col-lg-8 col-md-10 col-sm-12 top_black_block text-center">
                     <a href="" class="top_menu_link">Наши услуги</a>
                     <a href="" class="top_menu_link">О нас</a>
                     <a href="" class="top_menu_link">Отзывы</a>
@@ -28,9 +28,9 @@
                     <a href="" class="top_menu_link">Блог</a>
                     <a href="" class="top_menu_link">Вопрос-ответ</a>
                 </div>
-                <div class="offset-lg-3 col-lg-1 offset-md-1 col-md-1 top_black_block tex">
-                    <a href="tel:+380503559950" class="top_menu_link_to">&#128379;</a>
-                    <a href="https://mail.google.com/mail/u/0/#inbox?compose=CllgCJNqtbnWrnmlTlNjMjcNkRXdjLBxZbMxbxWjdQsMXrLNKQHhLWLnxCcrbJSSCkCKPkHhCXB" class="top_menu_link_to">&#128393;</a>
+                <div class="col-lg-4 top_black_block text-center">
+                    <a href="tel:+380503559950" class="top_menu_link_to">&#128379;</a><span>+380503559950</span>
+                    <a href="https://mail.google.com/mail/u/0/#inbox?compose=CllgCJNqtbnWrnmlTlNjMjcNkRXdjLBxZbMxbxWjdQsMXrLNKQHhLWLnxCcrbJSSCkCKPkHhCXB" class="top_menu_link_to">&#128393;</a><span>dezsan.kh@gmail.com</span>
                 </div>
             </div>
         </div>
