--- a/dez.html
+++ b/dez.html
@@ -25,7 +25,6 @@
                     <a href="" class="top_menu_link">О нас</a>
                     <a href="" class="top_menu_link">Отзывы</a>
                     <a href="" class="top_menu_link">Методы работы</a>
-                    <a href="" class="top_menu_link">Блог</a>
                     <a href="" class="top_menu_link">Вопрос-ответ</a>
                 </div>
                 <div class="col-lg-4 top_black_block text-center">
@@ -68,9 +67,9 @@
                         <li class="nav-item">
                             <a class="nav-link nav-link-text" href="#">Для организаций</a>
                         </li>
-                        <li class="nav-item">
+                        <!-- <li class="nav-item">
                             <a class="nav-link nav-link-text" href="#">Акции</a>
-                        </li>
+                        </li> -->
                         <li class="nav-item">
                             <a class="nav-link nav-link-text" href="#">Контакты</a>
                         </li>
@@ -124,6 +123,24 @@
     </div>
     <!-- КОНЕЦ -->
 
+    <!-- Синий блок после карусели -->
+    <!-- НАЧАЛО -->
+    <div class="container-fluid orange_container">
+        <div class="container">
+            <div class="row orange_container__content">
+                <div class="offset-lg-1 col-lg-3 col-md-4 col-sm-5">
+                    <span class="orange_container__header">Очистка систем вентиляций</span>
+                </div>
+                <div class="col-lg-5 col-md-5 col-sm-7">
+                    <span class="orange_container__text">ООО «СЭС «Чистый город» предлагает Вашему внимаю услугу по очистке и дезинфекции систем вентиляции.</span>
+                </div>
+                <div class="col-lg-2 col-md-3 col-sm-12 text-center align-item-center orange_container__button_container">
+                    <button class="btn btn-light orange_container__button">Подробнее...</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- КОНЕЦ -->
 
     <!-- Само содержание главной страницы -->
     <!-- НАЧАЛО -->
