--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                         <div class="one_card__infa">
                             <div class="one_card__icon">
                                 <i class="fa"> 
-                                    <img src="img/змеи.png" alt=""> 
+                                    <img src="img/змеи.jpg" style="position: relative; z-index: 2;" alt=""> 
                                 </i>
                             </div>
                             <h3 class="one_card__title title_shadow">Змеи</h3>
