--- a/our_services.html
+++ b/our_services.html
@@ -11,7 +11,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" id="ao_optimized_gfonts" href="https://fonts.googleapis.com/css?family=Roboto:500&amp;display=swap">
     <link rel="stylesheet" href="css/style_header.css">
+    <link rel="stylesheet" href="css/style_for_all.css">
     <link rel="stylesheet" href="css/style_main_on_the_page.css">
+    <link rel="stylesheet" href="css/style_content_on_main_page.css">
     <link rel="stylesheet" href="css/style_send_form.css">
     <link rel="stylesheet" href="css/style_garantiya.css">
     <link rel="stylesheet" href="css/style_footer.css">
@@ -88,12 +90,65 @@
 
     <!-- Контент страницы -->
     <!-- НАЧАЛО -->
-    <div class="container-fluid main">
+    <div class="container-fluid our_services">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12 main__container">
-                    <div class="main__header"></div>
-                    <div class="main__content"></div>
+                <div class="col-lg-12 text-center h1">
+                    <span class="our_services__main_text">Уничтожение и выведение грызунов и насекомых</span>
+                </div>
+                <div class="offset-lg-3 col-lg-6 offset-md-2 col-md-7">
+                    <div class="hr"></div>
+                </div>
+                <div class="offset-lg-3 col-lg-6 offset-md-2 col-md-7 text-center">
+                    <p class="our_services__text">Мы - команда профессионалов с многолетним опытом работы в области дезинсекции, дератизации и медицинской дезинфекции</p>
+                </div>
+                <div class="col-md-4 col-sm-6 text-center m-auto">
+                    <div class="one_card">
+                        <a href="">
+                            <div class="one_card__infa">
+                                <div class="one_card__icon">
+                                    <i class="fa"> 
+                                        <img src="img/home.png" style="position: relative; z-index: 2;" alt=""> 
+                                    </i>
+                                </div>
+                                <h3 class="one_card__title">для квартир</h3>
+                                <p class="one_card__content">Выведение насекомых, грызунов, плесени и грибка в квартирах</p>
+                                <p class="one_card__link">Узнать больше...</p>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6 text-center m-auto">
+                    <div class="one_card">
+                        <a href="">
+                            <div class="one_card__infa">
+                                <div class="one_card__icon">
+                                    <i class="fa"> 
+                                        <img src="img/country.png" style="position: relative; z-index: 2;" alt=""> 
+                                    </i>
+                                </div>
+                                <h3 class="one_card__title">для загородных участков</h3>
+                                <p class="one_card__content">уничтожение вредителей на загородных участках</p>
+                                <p class="one_card__link">Узнать больше...</p>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6 text-center m-auto">
+                    <div class="one_card">
+                        <a href="">
+                            <div class="one_card__infa">
+                                <div class="one_card__icon">
+                                    <i class="fa"> 
+                                        <img src="img/home.png" style="position: relative; z-index: 2;" alt=""> 
+                                    </i>
+                                </div>
+                                <h3 class="one_card__title">для организаций</h3>
+                                <p class="one_card__content">Услуги по дезинсекции, дератации, дезодорации для организаций. Все виды сандокументов. </p>
+                                <p class="one_card__link">Узнать больше...</p>
+                            </div>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
