--- a/question-answer.html
+++ b/question-answer.html
@@ -94,7 +94,7 @@
                 <div class="col-lg-12 questions__container">
                     <div class="questions__header"></div>
                     <div class="accordion accordion-flush questions__content" id="accordionFlushExample">
-                        <div class="accordion-item">
+                        <div class="accordion-item pt-4">
                               <h2 class="accordion-header" id="flush-headingOne">
                                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
                                     КАК ПОДГОТОВИТЬ КВАРТИРУ К ОБРАБОТКЕ ОТ НАСЕКОМЫХ?
@@ -250,7 +250,7 @@
                                     </div>
                                 </div>
                         </div>
-                        <div class="accordion-item">
+                        <div class="accordion-item pb-4">
                             <h2 class="accordion-header" id="flush-headingThree">
                               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTen" aria-expanded="false" aria-controls="flush-collapseTen">
                                 СПУСТЯ КАКОЕ ВРЕМЯ ПОСЛЕ ДЕЗИНСЕКЦИИ КЛОПЫ ИСЧЕЗНУТ ИЗ КВАРТИРЫ?
