--- a/for_organization.html
+++ b/for_organization.html
@@ -6,20 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="SHORTCUT ICON" href="img/dezodoracija.png" type="image/x-icon">
 
-    <title>Наши услуги</title>
-
+    <title>Для организаций</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" id="ao_optimized_gfonts" href="https://fonts.googleapis.com/css?family=Roboto:500&amp;display=swap">
     <link rel="stylesheet" href="css/style_header.css">
-    <link rel="stylesheet" href="css/style_for_all.css">
-    <link rel="stylesheet" href="css/style_main_on_the_page.css">
+    <link rel="stylesheet" href="css/style_first_block.css">
     <link rel="stylesheet" href="css/style_content_on_main_page.css">
     <link rel="stylesheet" href="css/style_send_form.css">
     <link rel="stylesheet" href="css/style_garantiya.css">
+    <link rel="stylesheet" href="css/style_pest-control.css">
     <link rel="stylesheet" href="css/style_footer.css">
+
 </head>
 <body>
-
     <!-- Верхнее меню на странице с названием фирмы и навигацией -->
     <!-- НАЧАЛО -->
     <div class="container-fluid top_black_menu">
@@ -71,7 +70,7 @@
                                 <a class="nav-link nav-link-text" href="#">Фумигация</a>
                             </li>  
                             <li class="nav-item">
-                                <a class="nav-link nav-link-text" href="#">Для организаций</a>
+                                <a class="nav-link nav-link-text" href="for_organization.html">Для организаций</a>
                             </li>
                             <!-- <li class="nav-item">
                                 <a class="nav-link nav-link-text" href="#">Акции</a>
@@ -88,67 +87,42 @@
     </div>
     <!-- КОНЕЦ -->
 
-    <!-- Контент страницы -->
+    <!-- Блок с фото и формой после хедера -->
     <!-- НАЧАЛО -->
-    <div class="container-fluid our_services">
+    <div class="container-fluid first_block__photo">
         <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center h1">
-                    <span class="our_services__main_text">Уничтожение и выведение грызунов и насекомых</span>
+            <div class="row first_block__container">
+                <div class="offset-lg-1 col-lg-6 col-md-7 first_block__text_container">
+                    <div class="first_block__text_content">
+                        <h1 class="first_block__main_text">Для организаций</h1>
+                        <ol class="first_block__list_with_text">
+                            <li>
+                                <span class="first_block__icon">&#10003;</span><span class="first_block__text">Оформление любых санитарных документов - оперативно и официально</span>
+                            </li>
+                            <li>
+                                <span class="first_block__icon">&#10003;</span><span class="first_block__text">Санитарные паспорта на транспорт</span>
+                            </li>
+                            <li>
+                                <span class="first_block__icon">&#10003;</span><span class="first_block__text">Программа производственного контроля</span>
+                            </li>
+                            <li>
+                                <span class="first_block__icon">&#10003;</span><span class="first_block__text">Журнал учета и расходования дезсредств</span>
+                            </li>
+                            <li>
+                                <span class="first_block__icon">&#10003;</span><span class="first_block__text">Гарантируем конфиденциальность</span>
+                            </li>
+                        </ol>
+                        <p class="text-center first_block__link"><a href="tel:84993703647">8(499)370-36-47</a> | <a href="https://mail.google.com/mail/u/0/#inbox?compose=CllgCJNqtbnWrnmlTlNjMjcNkRXdjLBxZbMxbxWjdQsMXrLNKQHhLWLnxCcrbJSSCkCKPkHhCXB">info@dezstancya.ru</a></p></div>
                 </div>
-                <div class="offset-lg-3 col-lg-6 offset-md-2 col-md-7">
-                    <div class="hr"></div>
-                </div>
-                <div class="offset-lg-3 col-lg-6 offset-md-2 col-md-7 text-center">
-                    <p class="our_services__text">Мы - команда профессионалов с многолетним опытом работы в области дезинсекции, дератизации и медицинской дезинфекции</p>
-                </div>
-                <div class="col-md-4 col-sm-6 text-center m-auto">
-                    <div class="one_card">
-                        <a href="">
-                            <div class="one_card__infa">
-                                <div class="one_card__icon">
-                                    <i class="fa"> 
-                                        <img src="img/home.png" style="position: relative; z-index: 2;" alt=""> 
-                                    </i>
-                                </div>
-                                <h3 class="one_card__title">для квартир</h3>
-                                <p class="one_card__content">Выведение насекомых, грызунов, плесени и грибка в квартирах</p>
-                                <p class="one_card__link">Узнать больше...</p>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-6 text-center m-auto">
-                    <div class="one_card">
-                        <a href="">
-                            <div class="one_card__infa">
-                                <div class="one_card__icon">
-                                    <i class="fa"> 
-                                        <img src="img/country.png" style="position: relative; z-index: 2;" alt=""> 
-                                    </i>
-                                </div>
-                                <h3 class="one_card__title">для загородных участков</h3>
-                                <p class="one_card__content">уничтожение вредителей на загородных участках</p>
-                                <p class="one_card__link">Узнать больше...</p>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-6 text-center m-auto">
-                    <div class="one_card">
-                        <a href="">
-                            <div class="one_card__infa">
-                                <div class="one_card__icon">
-                                    <i class="fa"> 
-                                        <img src="img/home.png" style="position: relative; z-index: 2;" alt=""> 
-                                    </i>
-                                </div>
-                                <h3 class="one_card__title">для организаций</h3>
-                                <p class="one_card__content">Услуги по дезинсекции, дератации, дезодорации для организаций. Все виды сандокументов. </p>
-                                <p class="one_card__link">Узнать больше...</p>
-                            </div>
-                        </a>
-                    </div>
+                <div class="col-lg-4 col-md-5 first_block__send_form">
+                    <p class="send_form__main_text">Желаете задать вопрос?</p>
+                    <span class="send_form__text">Заполните форму и мы ответим при первой же возможности</span>
+                    <form class="send_form__form ">
+                        <input type="text" class="form-control send_form__input" placeholder="Имя" maxlength="100" aria-label="First name" required>
+                        <input type="number" class="form-control send_form__input" placeholder="Номер телефона для связи" maxlength="10" aria-label="Last name" required>
+                        <textarea type="text" class="form-control send_form__textarea" placeholder="Комментарий" maxlength="350" aria-label="Last name" required></textarea>
+                        <button class="btn btn-light own-create-btn send_form__button">Отправить</button>
+                    </form>
                 </div>
             </div>
         </div>
@@ -162,13 +136,13 @@
             <h4>Заполните форму и получите персональное предложение</h4>
             <div class="row g-4">
                 <div class="col-lg-3 col-md-4">
-                    <input type="text" class="form-control container_of_the_form__input" placeholder="Имя" aria-label="First name" required>
+                    <input type="text" class="form-control container_of_the_form__input" placeholder="Имя" maxlength="150" aria-label="First name" required>
                 </div>
                 <div class="col-lg-3 col-md-4 m-auto mt-4">
-                    <input type="number" class="form-control container_of_the_form__input" placeholder="Номер телефона для связи" aria-label="Last name" required>
+                    <input type="number" class="form-control container_of_the_form__input" placeholder="Номер телефона для связи" maxlength="10" aria-label="Last name" required>
                 </div>
                 <div class="col-lg-3 col-md-4">
-                    <input type="text" class="form-control container_of_the_form__input" placeholder="Почта" aria-label="Last name" required>
+                    <input type="text" class="form-control container_of_the_form__input" placeholder="Почта" maxlength="150" aria-label="Last name" required>
                 </div>
             </div>
             <div class="row">
@@ -212,6 +186,51 @@
                         <p class="garantiya_time_content">Проведём дезработы в любое удобное для вас время: круглосуточно, в том числе в праздничные и выходные дни.</p>
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
+    <!-- КОНЕЦ -->
+
+    <!-- Оформление любых сан. документов -->
+    <!-- НАЧАЛО -->
+    <div class="container document">
+        <div class="row document_row">
+            <div class="col-lg-8 text-center">
+                <p class="document_block__title title_shadow">Внедрение программы пест-контроля на предприятиях производства и реализации пищевой продукции</p>
+            </div>
+            <div class="col-lg-8">
+                <hr>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid">
+        <div class="row document_card">
+            <div class="col-lg-3 col-md-4 document_card_block text-center">
+                <div class="document_card__blockimg">
+                    <img src="img/transport.jpg" class="document_card__img">
+                </div>
+                <p class="document_card_title">Дезинфекция транспортного средства</p>
+                <div class="hr"></div>
+                <p class="document_card_content">Обеззараживание и дезинфекция автосредства и оформление соответствующих документов.</p>   
+                <button class="btn btn-outline-danger own-create-btn">Подробнее...</button>
+            </div>
+            <div class="col-lg-3 col-md-4 document_card_block text-center">
+                <div class="document_card__blockimg">
+                    <img src="img/proizvodstvo.jpg" class="document_card__img">
+                </div>
+                <p class="document_card_title">Экозащита сельского хозяйства</p>
+                <div class="hr"></div>
+                <p class="document_card_content">Создаем современную экологическую защиту в сельско-хозяйственном и агро бизнесе</p>   
+                <button class="btn btn-outline-danger own-create-btn">Подробнее...</button>
+            </div>
+            <div class="col-lg-3 col-md-4 document_card_block text-center">
+                <div class="document_card__blockimg">
+                    <img src="img/doki.jpg" class="document_card__img">
+                </div>
+                <p class="document_card_title">Документальное подтверждение выполнения работ</p>
+                <div class="hr"></div>
+                <p class="document_card_content">Оформление санитарных документов оперативно и официально.</p>   
+                <button class="btn btn-outline-danger own-create-btn third_button">Подробнее...</button>
             </div>
         </div>
     </div>
@@ -345,6 +364,9 @@
         </div>
     </footer>
     <!-- КОНЕЦ -->
+
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 </body>
 </html>
