--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                                 <a class="nav-link nav-link-text" href="#">Фумигация</a>
                             </li>  
                             <li class="nav-item">
-                                <a class="nav-link nav-link-text" href="#">Для организаций</a>
+                                <a class="nav-link nav-link-text" href="for_organization.html">Для организаций</a>
                             </li>
                             <!-- <li class="nav-item">
                                 <a class="nav-link nav-link-text" href="#">Акции</a>
@@ -101,23 +101,23 @@
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="img/фото1_1.jpg" class="d-block carousel_img w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
+                    <img src="img/фото_3.jpg" class="d-block carousel_img w-100" alt="...">
+                    <!-- <div class="carousel-caption d-none d-md-block">
                         <h5>ПОЛНОЕ ИЗБАВЛЕНИЕ ОТ ВРЕДИТЕЛЕЙ!</h5>
                         <p>Быстро. Качественно. Надежно.</p>
-                    </div>
+                    </div> -->
                 </div>    
                 <div class="carousel-item">
-                    <img src="img/фото2_1.jpg" class="d-block carousel_img w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
+                    <img src="img/фото_1.jpg" class="d-block carousel_img w-100" alt="...">
+                    <!-- <div class="carousel-caption d-none d-md-block">
                         <h5>Заботимся о Вашей безопасности</h5>
-                    </div>
+                    </div> -->
                 </div>
                 <div class="carousel-item">
-                <img src="img/Фото 2.jpg" class="d-block carousel_img w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
+                <img src="img/фото_2.jpg" class="d-block carousel_img w-100" alt="...">
+                    <!-- <div class="carousel-caption d-none d-md-block">
                         <h5>Гарантируем результат!</h5>
-                    </div>
+                    </div> -->
                 </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-bs-slide="prev">
